Book creation API spec. created, but without auth. Creation Controller class created.
